--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "repository": "git@github.com:Gvozd/habidoist.git",
   "author": "Gvozd <gvozdev.viktor@gmail.com>",
   "license": "MIT",
+  "private": true,
+  "workspaces": ["packages/*"],
   "devDependencies": {
     "lerna": "^3.20.2"
   }
