--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,7 +2,7 @@
   "name": "@habidoist/web",
   "version": "0.1.0",
   "author": "Gvozd <gvozdev.viktor@gmail.com>",
-  "homepage": "https://github.com/habidoist/habidoist",
+  "homepage": "https://habidoist.github.io/habidoist/",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -87,7 +87,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -160,6 +162,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "speed-measure-webpack-plugin": "^1.3.1"
   }
 }
