--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -87,9 +87,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -162,7 +160,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0",
     "speed-measure-webpack-plugin": "^1.3.1"
   }
 }
