--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,8 +21,6 @@
     "sync"
   ],
   "dependencies": {
-    "@babel/core": "7.8.4",
-    "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -30,6 +28,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "typescript": "~3.7.2"
+  },
+  "devDependencies": {
+    "@babel/core": "7.8.4",
+    "@svgr/webpack": "4.3.3",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "10.0.3",
@@ -66,18 +71,16 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.13.0",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.0",
-    "react-dom": "^16.13.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "2.3.4",
     "ts-pnp": "1.1.5",
-    "typescript": "~3.7.2",
     "url-loader": "2.3.0",
     "webpack": "4.41.5",
     "webpack-dev-server": "3.10.2",
@@ -158,8 +161,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "speed-measure-webpack-plugin": "^1.3.1"
   }
 }
