--- a/.github/workflows/web.deploy.yml
+++ b/.github/workflows/web.deploy.yml
@@ -19,6 +19,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
       - run: yarn install --frozen-lockfile
+      # lint
+      - run: yarn run lint:ci
+        working-directory: packages/web
       # build
       - name: Cache build
         uses: actions/cache@v1
