--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -50,6 +50,7 @@
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
